2009-04-23  Adam Roben  <aroben@apple.com>

        Skip a newly-added test that fails on Windows

        See Bug 25344: http/tests/misc/redirect-to-external-url.html fails on
        Windows
        <https://bugs.webkit.org/show_bug.cgi?id=25344>

        Reviewed by Brady Eidson.

        * platform/win/Skipped: Added
        http/tests/misc/redirect-to-external-url.html.

2009-04-23  Brady Eidson  <beidson@apple.com>

        Update my just-landed layout test to agree with Tiger's CFNetwork

        * http/tests/misc/resources/redirect-to-external-url.php:

2009-04-22  Brady Eidson  <beidson@apple.com>

        Reviewed by Maciej Stachowiak

        With the fix for:
        <rdar://problem/6786961> - "Are you sure you want to resubmit this form?" nag displays twice.
        And also to make sure we never rebreak:
        <rdar://problem/5689748> - Cannot redirect to protocols handled by external applications.

        * http/tests/misc/redirect-to-external-url-expected.txt: Added.
        * http/tests/misc/redirect-to-external-url.html: Added.
        * http/tests/misc/resources/redirect-to-external-url-iframe.html: Added.
        * http/tests/misc/resources/redirect-to-external-url.php: Added.

        * http/tests/misc/policy-delegate-called-twice-expected.txt: Added.
        * http/tests/misc/policy-delegate-called-twice.html: Added.
        * http/tests/misc/resources/iframe-policy-1.html: Added.
        * http/tests/misc/resources/iframe-policy-2.html: Added.

2009-04-22  Oliver Hunt  <oliver@apple.com>

        Reviewed by NOBODY (Missed file from prior patch).

        Include updated results

        * fast/events/mouse-drag-from-frame-to-other-frame-expected.txt:

2009-04-22  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoff Garen.

        Modify test to only record the important mouse events

        * fast/events/resources/mouse-drag-from-frame-target-subframe.html:

2009-04-22  Justin Garcia  <justin.garcia@apple.com>
